[package]
name = "risect"
version = "0.1.0-alpha.1"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
description = "A simple bisection tool"
repository = "http://github.com/elbaro/risect"
readme = "README.md"
keywords = ["bisect", "debug", "git", "search", "tool"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0.31"
colored = "1.9.3"
